# ScrewdriverRL

./: .gitignore  README.md  eval.py  play.py  pyproject.toml  train.py
assets/linker_hand_l20/: linkerhand_l20_left.urdf
assets/screwdriver/variants/: manifest.json  screwdriver_v00.urdf  screwdriver_v01.urdf  screwdriver_v02.urdf  screwdriver_v03.urdf  screwdriver_v04.urdf  screwdriver_v05.urdf
assets/xela_models/: allegro_hand_right_isaaclab.urdf
docs/: 2-stage-training.md
screwdriver_rl/: __init__.py
screwdriver_rl/algo/: __init__.py  experience.py  metrics.py  models.py  padapt.py  ppo.py  running_mean_std.py
screwdriver_rl/algos/: __init__.py  latent_network.py  proprio_adapt.py
screwdriver_rl/configs/: __init__.py  curricula.py  train_cfg.py
screwdriver_rl/core/: __init__.py  rewards.py
screwdriver_rl/deploy/: __init__.py  deploy_linker.py  linker_sdk_map.py  policy.py
screwdriver_rl/robots/: __init__.py  allegro.py  hand_spec.py
screwdriver_rl/tasks/: __init__.py
screwdriver_rl/tasks/allegro/: __init__.py  screwdriver_rotation_4f_env_cfg.py  screwdriver_rotation_env.py  screwdriver_rotation_env_cfg.py
screwdriver_rl/tasks/base/: __init__.py  screwdriver_rotation_env.py  screwdriver_rotation_env_cfg.py
screwdriver_rl/utils/: __init__.py  cli.py  logging.py  rl_games_observer.py  variants.py
scripts/: eval.py  play.py  smoke_test.py  train_student.py  train_teacher.py
tests/: test_algo.py  test_logging.py  test_rewards.py  test_variants.py
tools/: generate_screwdriver_variants.py  render_task_configs.py  validate_pregrasp_buckets.py
(+14 files in other folders)
