[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "screwdriver_rl"
version = "0.1.0"
description = "Dexterous in-hand screwdriver rotation tasks for Isaac Lab"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "gymnasium",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["screwdriver_rl*"]

[project.optional-dependencies]
dev = ["ruff", "black"]
